fix z-index in the navigation for mobile

--- a/style.css
+++ b/style.css
@@ -79,6 +79,8 @@ header {
   border-radius: 10px;
   transition: 0.3s;
   background-color: var(--white);
+  overflow: hidden;
+  z-index: 9;
 }
 
 .nav__menu.active {
